--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "inngest:dev": "npx inngest-cli@latest dev",
+    "prisma:studio": "npx prisma studio",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:push": "npx prisma db push",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -42,6 +47,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "inngest": "^3.37.0",
     "lucide-react": "^0.487.0",
     "next": "^15.3.0",
     "next-auth": "^5.0.0-beta.25",
