--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "inngest": "^3.37.0",
     "lucide-react": "^0.487.0",
     "next": "^15.3.0",
