--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cron-parser": "^5.2.0",
+    "cronstrue": "^2.61.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "inngest": "^3.37.0",
