--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@react-email/components": "^0.0.36",
+    "@segment/analytics-next": "^1.81.1",
     "@tanstack/react-query": "^5.73.3",
     "@tanstack/react-table": "^8.21.2",
     "@uploadcare/react-uploader": "^1.6.0",
     "@uploadcare/upload-client": "^6.14.3",
+    "@useparagon/connect": "^2.0.9",
     "@xyflow/react": "^12.6.4",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
@@ -55,6 +57,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "inngest": "^3.37.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "next": "^15.3.0",
     "next-auth": "^5.0.0-beta.25",
